adding features and update features

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@
 database.default.hostname = localhost
 database.default.database = newsrmuat_new
 database.default.username = root
-database.default.password = ''
+database.default.password = '@1234#1234'
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
