Allocation and Commitment

--- a/.env
+++ b/.env
@@ -39,6 +39,8 @@ database.default.DBPrefix =
 database.default.port = 3306
 database.second.database = newsrmuat_new
 
+APP_TIMEZONE=Asia/Kolkata
+
 profilePicUrl = https://teamuat.ypl.co.in/uploads/profile-pic
 
 # database.tests.hostname = localhost
