--- a/.env
+++ b/.env
@@ -33,13 +33,13 @@
 database.default.hostname = localhost
 database.default.database = newsrmuat_new
 database.default.username = root
-database.default.password = '@1234#1234'
+database.default.password = ''
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
 database.second.database = newsrmuat_new
 
-APP_TIMEZONE=Asia/Kolkata
+APP_TIMEZONE = Asia/Kolkata
 
 profilePicUrl = https://teamuat.ypl.co.in/uploads/profile-pic
 
