--- a/.env
+++ b/.env
@@ -41,6 +41,8 @@ database.second.database = newsrmuat_new
 
 APP_TIMEZONE = Asia/Kolkata
 
+encryption.key = base64:Qk1RZ2VYV0h1S2xFQ3lHb0p6S0F2N3R3
+
 profilePicUrl = https://teamuat.ypl.co.in/uploads/profile-pic
 
 # database.tests.hostname = localhost
